fix visible perfect scrollbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,6 +101,10 @@
   margin-left: 10px;
 }
 
+.ps-scrollbar-y-rail{
+  opacity: 0.5 !important;
+}
+
 //.select_aspect {
 //  background-color: gray;
 //}
